--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -51,7 +51,7 @@
 
 /* Estilo del body */
 body {
-  background-image: url('/assets/img/fondo-web.png');
+  background-image: url('./assets/img/fondo-web.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -93,7 +93,7 @@ body {
 
 /*segunda seccion */
 .container-fluid.star-background {
-  background-image: url('/assets/img/fondo-estrellas.png');
+  background-image: url('./assets/img/fondo-estrellas.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -168,7 +168,7 @@ body {
   background-color: #1d1b3a !important;
 }
 .producto {
-  background-image: url('/assets/img/COMPRA_Contenedor.png');
+  background-image: url('./assets/img/COMPRA_Contenedor.png');
   background-size: cover;
   height: 300px;
   border-radius: 10px 10px 0 0;
@@ -177,7 +177,7 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .texto-producto {
-  background-image: url('/assets/img/fondo-ticket-compra.png');
+  background-image: url('./assets/img/fondo-ticket-compra.png');
   font-family: 'Open Sans', sans-serif;
   font-weight: 700;
   font-style: bold;
@@ -353,7 +353,7 @@ body {
 
   /* Background para pantallas móviles */
   body {
-    background-image: url('/assets/img/fondo-mobile.png');
+    background-image: url('./assets/img/fondo-mobile.png');
   }
 
   #navbarNav {
