--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -51,7 +51,7 @@
 
 /* Estilo del body */
 body {
-  background-image: url('./assets/img/fondo-web.png');
+  background-image: url('../img/fondo-web.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -168,7 +168,7 @@ body {
   background-color: #1d1b3a !important;
 }
 .producto {
-  background-image: url('./assets/img/COMPRA_Contenedor.png');
+  background-image: url('../img/COMPRA_Contenedor.png');
   background-size: cover;
   height: 300px;
   border-radius: 10px 10px 0 0;
@@ -176,8 +176,9 @@ body {
   text-align: center;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
 .texto-producto {
-  background-image: url('./assets/img/fondo-ticket-compra.png');
+  background-image: url('../img/fondo-ticket-compra.png');
   font-family: 'Open Sans', sans-serif;
   font-weight: 700;
   font-style: bold;
@@ -186,6 +187,7 @@ body {
   padding: 10px;
   margin-bottom: 0 !important;
 }
+
 @keyframes hvr-push {
   50% {
     transform: scale(0.8);
