--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -85,7 +85,7 @@ body {
 
 .movie-poster {
   max-width: 100%;
-  height: auto;
+  height: 15rem;
   border-radius: 8px;
   cursor: pointer;
   box-shadow: 7px 10px 4px 7px rgba(25, 25, 25, 0.8);
@@ -332,6 +332,18 @@ body {
 }
 .calendar-cell.filled {
   background-color: #1e90ff;
+}
+.empty-cell{
+    padding: 10px;
+  background-color: #3b3f4b;
+  color: white;
+  text-align: center;
+  border: 1px solid #252833;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor:default;
 }
 .schedule-section img.etiquetas{
  width: 35px ;
