--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -103,12 +103,10 @@ body {
   background-color: rgba(0, 0, 0, 0.8);
   padding: 20px;
   margin-bottom: 20px;
-  border-radius: 10px;
 }
 
 .schedule-section img {
-  width: 84%;
-  border-radius: 10px;
+  width: 100%;
 }
 
 .sidebar {
@@ -119,7 +117,7 @@ body {
 
 .iframe-container {
   background-color: rgb(25, 25, 25);
-  height: 300px;
+  height: 100%;
   /* Ajusta según lo necesario */
 }
 
@@ -274,12 +272,42 @@ body {
 .arrow-up:after {
   transform: translate(-50%, -50%) rotate(-45deg);
 }
+#peliculasTitulos {
+    display: flex; /* Utiliza flexbox para tener control sobre el espaciado */
+    flex-wrap: wrap; /* Permite que los elementos pasen a la siguiente fila si no caben */
+    justify-content: center; /* Alinea los elementos en el centro */
+    gap: 10px; /* Ajusta el espacio horizontal y vertical entre las columnas */
+    padding-bottom: 20px; /* Mantén un pequeño espacio en la parte inferior */
+}
+
+#peliculasTitulos .col-2 {
+    flex: 0 0 auto; /* Asegura que las columnas no se expandan */
+    max-width: 14%; /* Ajusta para que quepan más columnas en una fila */
+    padding: 0; /* Elimina el padding por defecto de las columnas */
+}
+
+#peliculasTitulos .movie-poster {
+    width: 100%; /* Asegura que las imágenes ocupen el 100% del contenedor */
+    height: auto; /* Mantiene la proporción de las imágenes */
+    border-radius: 8px; /* Añade un borde redondeado a las imágenes, opcional */
+}
+
+#peliculasTitulos a {
+    display: block; /* Asegura que el enlace abarque toda la imagen */
+    text-align: center; /* Centra el enlace y el contenido dentro del bloque */
+}
+
+
+
+
+
 .calendar-container {
   text-align: center;
   margin: 20px auto;
 }
 
 .calendar-header p {
+  margin: 10px;
   font-size: 18px;
   font-weight: bold;
   text-align:left;
@@ -288,7 +316,7 @@ body {
 .calendar-grid {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  gap: 1px;
+  gap: 4px;
   margin-top: 10px;
 }
 
@@ -299,21 +327,15 @@ body {
 .calendar-day.viernes,
 .calendar-day.sabado,
 .calendar-day.domingo {
-  background-color: #ab81cd;
+  background-image: url('../img/calendar-day.png');
+  background-size: contain;
 }
 .calendar-day {
-  padding: 10px;
-  background-color: #3b3f4b;
-  color: white;
-  border: 1px solid #252833;
-}
-.calendar-day.lunes {
-  border-top-left-radius: 18px;
+  padding: 6px 10px;
+  background-image: url('../img/calendar-day.png');
+  background-size: contain;
 }
 
-.calendar-day.domingo {
-  border-top-right-radius: 18px;
-}
 .calendar-cell {
   padding: 10px;
   background-color: #3b3f4b;
@@ -425,7 +447,6 @@ body {
   }
 .schedule-section img {
   width: 280px;
-  border-radius: 10px;
   margin-left: 10%;
 }
   /* Ajusta el tamaño de las imágenes de las etiquetas en móvil */
