--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -108,8 +108,8 @@ body {
 .schedule-section img {
   width: 100%;
 }
-.schedule-section .img-cartelera{
-  min-height: 250px;
+.schedule-section img .img-cartelera{
+  min-height: 250px !important;
 }
 .sidebar {
   display: flex;
@@ -118,9 +118,42 @@ body {
 }
 
 .iframe-container {
-  background-color: rgb(25, 25, 25);
   height: 100%;
-  /* Ajusta según lo necesario */
+  max-height: 250px;
+}
+/* Estilos personalizados para la sección de películas */
+.schedule-section .custom-row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: -140px;
+}
+
+.schedule-section .img-cartelera {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    max-height:250px; /* Ajustable según preferencia */
+}
+
+.schedule-section .iframe-container {
+    position: relative;
+    padding-bottom: 56.25%; /* Relación de aspecto 16:9 */
+    height: 0;
+}
+
+.schedule-section .iframe-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.calendar-container {
+  text-align: center;
+  margin: 20px auto;
+  margin-top: 20px;
+  width: 100%;
 }
 
 .map-container {
@@ -275,38 +308,35 @@ body {
   transform: translate(-50%, -50%) rotate(-45deg);
 }
 #peliculasTitulos {
-    display: flex; /* Utiliza flexbox para tener control sobre el espaciado */
-    flex-wrap: wrap; /* Permite que los elementos pasen a la siguiente fila si no caben */
-    justify-content: center; /* Alinea los elementos en el centro */
-    gap: 10px; /* Ajusta el espacio horizontal y vertical entre las columnas */
-    padding-bottom: 20px; /* Mantén un pequeño espacio en la parte inferior */
+    display: flex; 
+    flex-wrap: wrap; 
+    justify-content: center; 
+    gap: 10px; 
+    padding-bottom: 20px; /
 }
 
 #peliculasTitulos .col-2 {
-    flex: 0 0 auto; /* Asegura que las columnas no se expandan */
-    max-width: 14%; /* Ajusta para que quepan más columnas en una fila */
-    padding: 0; /* Elimina el padding por defecto de las columnas */
+    flex: 0 0 auto; 
+    max-width: 14%; 
+    padding: 0; 
 }
 
 #peliculasTitulos .movie-poster {
-    width: 100%; /* Asegura que las imágenes ocupen el 100% del contenedor */
-    height: auto; /* Mantiene la proporción de las imágenes */
-    border-radius: 8px; /* Añade un borde redondeado a las imágenes, opcional */
+    width: 100%; 
+    height: auto; 
+    border-radius: 8px; 
+    max-height: 250px;
 }
 
 #peliculasTitulos a {
-    display: block; /* Asegura que el enlace abarque toda la imagen */
-    text-align: center; /* Centra el enlace y el contenido dentro del bloque */
+    display: block; 
+    text-align: center;
 }
 
 
 
 
 
-.calendar-container {
-  text-align: center;
-  margin: 20px auto;
-}
 
 .calendar-header p {
   margin: 10px;
